# irtk-simple

./: .gitignore  CMakeLists.txt  LICENSE  README  README.MD  README.md
applications/: CMakeLists.txt  rescale_real.cc  splitvolume.cc
common++/src/: irtkCommon.cc  weightedmedian.cc
config/: FindTBB.cmake  IRTKConfig.cmake.in  IRTKGenerateConfigFile.cmake  IRTKInclude.cmake
documentation/: doxyfile.in
geometry++/include/: irtkMatrix.h
image++/include/: irtkImageHistogram_1D.h  irtkNonLocalMedianFilter.h
image++/src/: CMakeLists.txt  irtkFileOpenCVToImage.cc  irtkNonLocalMedianFilter.cc
tbb/lib/: libtbb_preview_debug.so.2
tbb/lib/ia32/gcc4.1/: libtbb.so.2  libtbb_debug.so.2  libtbb_preview.so.2  libtbb_preview_debug.so.2  libtbbmalloc.so.2  libtbbmalloc_debug.so.2  libtbbmalloc_proxy.so.2  libtbbmalloc_proxy_debug.so.2
tbb/lib/ia32/gcc4.4/: libtbb.so.2  libtbb_debug.so.2  libtbb_preview.so.2  libtbb_preview_debug.so.2  libtbbmalloc.so.2  libtbbmalloc_debug.so.2  libtbbmalloc_proxy.so.2  libtbbmalloc_proxy_debug.so.2
tbb/lib/intel64/gcc4.1/: libtbb.so.2  libtbb_debug.so.2  libtbb_preview.so.2  libtbb_preview_debug.so.2  libtbbmalloc.so.2  libtbbmalloc_debug.so.2  libtbbmalloc_proxy.so.2  libtbbmalloc_proxy_debug.so.2
tbb/lib/intel64/gcc4.4/: libtbb.so.2  libtbb_debug.so.2  libtbb_preview.so.2  libtbbmalloc.so.2  libtbbmalloc_debug.so.2  libtbbmalloc_proxy.so.2  (+1 more)
tbb/lib/mic/: libtbb.so.2  libtbb_debug.so.2  libtbb_preview.so.2  libtbb_preview_debug.so.2  libtbbmalloc.so.2  libtbbmalloc_debug.so.2  libtbbmalloc_proxy.so.2  libtbbmalloc_proxy_debug.so.2
(+10 files in other folders)
